<resources>
    <!--- General Strings -->
    <string name="app_name">Housemates</string>
    <string name="action_settings">Settings</string>
    <string name="logo">Housemate Logo</string>
    <string name="housemate">Housemate List</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Shopping List</string>
    <string name="second_fragment_label">Add Item</string>
    <!-- Strings for log in screen -->
    <string name="enter_house">Enter House Name</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="join">Join</string>
    <!-- title for Shopping List -->
    <string name="shopping_li">Shopping List</string>

    <!-- Strings used for Shopping List -->
    <string name="qt">Quantity</string>
    <string name="item_name">Item Name</string>
    <string name="price">Price</string>
    <string name="purchase">Purchase Button</string>

    <!-- Strings used for Purchase List -->
    <string name="purchase_title">Purchase List</string>
    <string name="addPurchaser"> Add Purchaser</string>
    <!-- Strings used for Add Item -->
    <string name="add">Add Item</string>
    <string name="interestedHM">Interested Housemates</string>
    <string name="qt_t">Quantity:</string>
    <string name="item_name_t">Item Name:</string>
    <string name="price_t">Price:</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Strings used for Calendar Month -->
    <string name="events">Events</string>
    <string name="calendar">Calendar</string>

    <!-- Strings used for Add Event -->
    <string name="add_event">Add Event</string>
    <string name="addHM">Add Housemates</string>
    <string name="event_name_t">Event Name:</string>
    <string name="date_t">Date:</string>
    <string name="st_t">Start Time:</string>
    <string name="et_t">End Time:</string>
    <string name="back">Back</string>
    <string name="slash">/</string>
    <string name="colon">:</string>
    <string name="second_calendar">Second Calendar</string>
    <!-- Strings for transactions -->
    <string name="add_housemate">Add Housemate</string>
    <string name="transactions">Transactions</string>
    <string name="recurrence_t">Recurrence:</string>
    <string name="debt">Debt</string>
    <string name="name">Name:</string>

    <!-- Strings for transactions -->
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="create">Create</string>
    <string name="registration_success_msg">Registration successful. Please sign in now.</string>
    <string name="user_already_exists_msg">Registration failed. Username already exists.</string>
    <string name="invalid_credentials_msg">Signin failed. Invalid credentials.</string>
    <string name="house_already_exists_msg">Registration failed. House already exists.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>