<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    tools:context=".view.homeScreen.HomeScreenFragment">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/open_calender_button"
        android:layout_width="166dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/rubik_bold"
        android:text="@string/calendar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/open_shoppingList_button"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="@+id/open_shoppingList_button"
        app:layout_constraintTop_toBottomOf="@+id/open_shoppingList_button"
        app:layout_constraintVertical_bias="0.114" />

    <Button
        android:id="@+id/open_housemateList_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:fontFamily="@font/rubik_bold"
        android:text="@string/housemate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/open_shoppingList_button"
        android:layout_width="171dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/rubik_bold"
        android:text="@string/shopping_li"
        app:layout_constraintEnd_toEndOf="@+id/open_housemateList_button"
        app:layout_constraintStart_toStartOf="@+id/open_housemateList_button"
        app:layout_constraintTop_toBottomOf="@+id/open_housemateList_button" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>