<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.addItemView.AddItemFragment">


    <Button
        android:id="@+id/add_Event_button"
        android:layout_width="123dp"
        android:layout_height="60dp"
        android:elevation="4dp"
        android:fontFamily="@font/rubik_bold"
        android:text="@string/add_event"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/addHM"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/square"
        app:layout_constraintVertical_bias="0.652"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/addHM"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="260dp"
        android:layout_height="63dp"
        android:layout_marginBottom="124dp"
        android:elevation="4dp"
        android:fontFamily="@font/rubik_bold"
        android:text="@string/addHM"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="159dp"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addHM" />

    <View
        android:id="@+id/square"
        android:layout_width="263dp"
        android:layout_height="314dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="124dp"
        android:background="@drawable/square"
        android:elevation="4dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/add_event_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/rubik_bold"
        android:text="@string/add_event"
        android:textAppearance="@style/add_item"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/square"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/square"
        app:layout_constraintTop_toTopOf="@+id/square" />

    <TextView
        android:id="@+id/label_event_name"
        android:layout_width="59dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="127dp"
        android:fontFamily="@font/rubik_bold"
        android:labelFor="@id/type_event_name"
        android:text="@string/event_name_t"
        android:textAlignment="center"
        android:textAppearance="@style/item_labels"
        app:layout_constraintEnd_toEndOf="@+id/square"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/square"
        app:layout_constraintTop_toBottomOf="@+id/add_event_header" />

    <EditText
        android:id="@+id/type_event_name"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/label_event_name"
        app:layout_constraintEnd_toEndOf="@+id/square"
        app:layout_constraintTop_toTopOf="@+id/label_event_name"
        app:layout_constraintVertical_bias="0.52"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/label_event_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/rubik_bold"
        android:labelFor="@id/type_date"
        android:text="@string/date_t"
        android:textAppearance="@style/item_labels"
        app:layout_constraintEnd_toEndOf="@+id/square"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/label_event_name"
        app:layout_constraintTop_toBottomOf="@+id/label_event_name" />

    <EditText
        android:id="@+id/type_date"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="date"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/label_event_date"
        app:layout_constraintEnd_toEndOf="@+id/square"
        app:layout_constraintTop_toTopOf="@+id/label_event_date"
        app:layout_constraintVertical_bias="0.52"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/label_st"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/rubik_bold"
        android:labelFor="@id/type_price"
        android:text="@string/st_t"
        android:textAppearance="@style/item_labels"
        app:layout_constraintBottom_toBottomOf="@+id/square"
        app:layout_constraintEnd_toEndOf="@+id/square"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/label_event_date"
        app:layout_constraintTop_toBottomOf="@+id/label_event_date"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/label_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/rubik_bold"
        android:labelFor="@id/type_price"
        android:text="@string/et_t"
        android:textAppearance="@style/item_labels"
        app:layout_constraintBottom_toBottomOf="@+id/square"
        app:layout_constraintEnd_toEndOf="@+id/square"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/label_st"
        app:layout_constraintTop_toBottomOf="@+id/label_st"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/type_st"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="time"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/label_st"
        app:layout_constraintEnd_toEndOf="@+id/square"
        app:layout_constraintTop_toTopOf="@+id/label_st"
        app:layout_constraintVertical_bias="0.52"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/type_et"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="time"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/label_et"
        app:layout_constraintEnd_toEndOf="@+id/square"
        app:layout_constraintTop_toTopOf="@+id/label_et"
        app:layout_constraintVertical_bias="0.52"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>